# Industrial_Algorithm_Platform

./: README.md
AlgorithmPlatform/: AlgorithmPlatform.pro
AlgorithmPlatform/Algorithm_Platform_GUI/: Algorithm_Platform_GUI.pro  PlatformIcon.qrc  main.cpp  platformgui_widget.cpp  platformgui_widget.h  platformgui_widget.ui  savingdialog.cpp  savingdialog.h
AlgorithmPlatform/Algorithm_Platform_GUI/LitimgWidget/: ResultLitWidget.cpp  ResultLitWidget.h  litimgitemwidget.cpp  litimgitemwidget.h  litimgwidget.cpp  litimgwidget.h
AlgorithmPlatform/Algorithm_Platform_GUI/Plugins/: MainInterface.cpp  MainInterface.h
AlgorithmPlatform/Algorithm_Platform_GUI/ProcessManger/: processlist.cpp  processlist.h
AlgorithmPlatform/Algorithm_Platform_GUI/ThreadAlgorithm/: algorithmworker.cpp  algorithmworker.h  exportworker.cpp  exportworker.h
AlgorithmPlatform/Algorithm_Platform_GUI/ViewWidget/: CustomGraphicsView.cpp  CustomImageItem.cpp  CustomImageView.h
AlgorithmPlatform/Algorithm_Platform_GUI/include/: imageconvert.h
AlgorithmPlatform/Algorithm_Plugin/: Algorithm_Plugin.pro
AlgorithmPlatform/Algorithm_Plugin/CannyPlugin/: CannyPlugin.cpp  (+6 more)
algorithm_src/canny_detect/: CMakeLists.txt  ExampleMain.cpp  canny_detect.cpp
algorithm_src/contour_detect/: CMakeLists.txt  ExampleMain.cpp  contour_detect.cpp
algorithm_src/pcb_detect/: CMakeLists.txt  ExampleMain.cpp  pcb_detect.cpp
algorithm_src/photometric_stereo/: CMakeLists.txt  ExampleMain.cpp  PhotometricStereo.cpp
include/: PhotometricStereo.h  XLTemplateMatch.h  canny_detect.h  contour_detect.h  pcb_detect.h
(+21 files in other folders)
